--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ before_install:
   - docker-compose up -d
 
 script:
-  - make test-docker
+  - make test-docker unittestcover-docker
   - make all-docker
